# M

./: db.sqlite3  install_package.py  installed_packages.txt  pyproject.toml  remove_unnecessary_packages.py  requirements.txt  wsgi.py
myproje/: .gitignore  db.sqlite3  requirements.txt
myproje/myproje/: settings.py  urls.py
myproje/users/: .views.py.swg  apps.py  models.py  urls.py  views.py
users/: models.py  sms.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_admin_options_alter_admin_managers_and_more.py  0003_ticket_booked_time_ticket_ticket_id.py  0004_alter_ticket_booked_time.py  0005_alter_ticket_booked_time.py  0006_alter_admin_id_alter_bus_id_alter_city_id_and_more.py  0007_alter_admin_id_alter_bus_id_alter_city_id_and_more.py  0008_ticket_pnr.py  0009_admin_registered_time_admin_registration_id.py  0010_bus_registered_time_bus_registration_id_and_more.py
users/templates/users/: Businsert.html  about.html  admin.html  admindelet.html  blog.html  busdelet.html  busdelet.html.bak  buses.html  busschange.html  busupdate.html  busupdate.html.bak  checkroot.html  checkuser.html  cheeckrout.html  cheeckroutee.html  cheeckrouteee.html  cheeckrouteeee.html  city.html  citydelet.html  comment.html  commentdelet.html  commentdelet.html.bak  comments.html  deleteticket.html  driverdelete.html  driverdelete.html.bak  drivers.html  error.html  error1.html  errors.html  forgot.html  getticket.html  index.html  login.html  password.html  profile.html  register.html  register.html.bak  roote.html  rootee.html  (+12 more)
(+34 files in other folders)
